# poisson-image-editing

./: CMakeLists.txt  README.md
examples/: seamless_blending.cpp  seamless_cloning.cpp  seamless_copy.cpp
inc/blend/: blend.h  clone.h  poisson_blend.h  poisson_solver.h
src/: blend.cpp  clone.cpp  poisson_blend.cpp  poisson_solver.cpp
tests/: config.h.in  poisson.cpp
